--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
 
     <body>
-        <div class="navbar hide navbar-fixed-top" data-activeslide="1">
+        <div class="navbar navbar-fixed-top" data-activeslide="1">
             <div class="container">
 
                 <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
@@ -47,18 +47,10 @@
                             </a>
                         </li>
                         <li data-slide="3" class="col-12 col-sm-2">
-                            <a id="menu-link-3" href="#slide-3" title="Next Section"><span class="icon icon-briefcase"></span>  <span class="text">PORTFOLIO</span>
+                            <a id="menu-link-3" href="#slide-3" title="Next Section"><span class="icon icon-briefcase"></span>  <span class="text">PHOTO GALLERY</span>
                             </a>
                         </li>
                         <li data-slide="4" class="col-12 col-sm-2">
-                            <a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span>  <span class="text">PROCESS</span>
-                            </a>
-                        </li>
-                        <li data-slide="5" class="col-12 col-sm-2">
-                            <a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-heart"></span>  <span class="text">CLIENTS</span>
-                            </a>
-                        </li>
-                        <li data-slide="6" class="col-12 col-sm-2">
                             <a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span>  <span class="text">CONTACT</span>
                             </a>
                         </li>
@@ -87,6 +79,7 @@
         <!-- === MAIN Background === -->
         <div class="slide story" id="slide-1" data-slide="1">
             <div class="container">
+                <h3 class="watch-out">Watch out for upcoming events and fundraising raffles</h3>
                 <div id="home-row-1" class="row clearfix">
                     <div class="col-12">
                         <h1 class="font-semibold">Carlisa, Inc. <span class="font-thin">Year End Fundraising Event</span></h1>
@@ -221,122 +214,8 @@
         </div>
         <!-- /slide3 -->
 
-        <!-- === Slide 4 - Process === -->
-        <div class="slide hide story" id="slide-4" data-slide="4">
-            <div class="container">
-                <div class="row title-row">
-                    <div class="col-12 font-thin">See us <span class="font-semibold">at work</span>
-                    </div>
-                </div>
-                <!-- /row -->
-                <div class="row line-row">
-                    <div class="hr">&nbsp;</div>
-                </div>
-                <!-- /row -->
-                <div class="row subtitle-row">
-                    <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                    <div class="col-12 col-sm-10 font-light">There are many variations of passages of Lorem Ipsum available,
-                        but the majority have suffered alteration in some form, by
-                        injected humour, or randomised words which don't look even
-                        slightly believable.</div>
-                    <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                </div>
-                <!-- /row -->
-                <div class="row content-row">
-                    <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                    <div class="col-12 col-sm-2">
-                        <p><i class="icon icon-bolt"></i>
-                        </p>
-                        <h2 class="font-thin">Listening to<br><span class="font-semibold" >your needs</span></h2>
-                        <h4 class="font-thin">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
-                    </div>
-                    <!-- /col12 -->
-                    <div class="col-12 col-sm-2">
-                        <p><i class="icon icon-cog"></i>
-                        </p>
-                        <h2 class="font-thin">Project<br><span class="font-semibold">discovery</span></h2>
-                        <h4 class="font-thin">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
-                    </div>
-                    <!-- /col12 -->
-                    <div class="col-12 col-sm-2">
-                        <p><i class="icon icon-cloud"></i>
-                        </p>
-                        <h2 class="font-thin">Storming<br><span class="font-semibold">our brains</span></h2>
-                        <h4 class="font-thin">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
-                    </div>
-                    <!-- /col12 -->
-                    <div class="col-12 col-sm-2">
-                        <p><i class="icon icon-map-marker"></i>
-                        </p>
-                        <h2 class="font-thin">Getting<br><span class="font-semibold">there</span></h2>
-                        <h4 class="font-thin">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
-                    </div>
-                    <!-- /col12 -->
-                    <div class="col-12 col-sm-2">
-                        <p><i class="icon icon-gift"></i>
-                        </p>
-                        <h2 class="font-thin">Delivering<br><span class="font-semibold">the product</span></h2>
-                        <h4 class="font-thin">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
-                    </div>
-                    <!-- /col12 -->
-                    <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                </div>
-                <!-- /row -->
-            </div>
-            <!-- /container -->
-        </div>
-        <!-- /slide4 -->
-
-        <!-- === Slide 5 === -->
-        <div class="slide hide story" id="slide-5" data-slide="5">
-            <div class="container">
-                <div class="row title-row">
-                    <div class="col-12 font-thin"><span class="font-semibold">Clients</span> we’ve worked with</div>
-                </div>
-                <!-- /row -->
-                <div class="row line-row">
-                    <div class="hr">&nbsp;</div>
-                </div>
-                <!-- /row -->
-                <div class="row subtitle-row">
-                    <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                    <div class="col-12 col-sm-10 font-light">Contrary to popular belief, Lorem Ipsum is not simply random text.
-                        It has roots in a piece of classical Latin literature from
-                        45 BC, making it over 2000 years old.
-                        <br/>
-                        <br/>The standard chunk of Lorem Ipsum used since the 1500s is reproduced
-                        below for those interested. Sections 1.10.32 and 1.10.33 from
-                        "de Finibus Bonorum et Malorum" by Cicero.</div>
-                    <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                </div>
-                <!-- /row -->
-                <div class="row content-row">
-                    <div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
-                    <div class="col-12 col-sm-2">
-                        <img src="images/client01.png" alt="">
-                    </div>
-                    <div class="col-12 col-sm-2">
-                        <img src="images/client02.png" alt="">
-                    </div>
-                    <div class="col-12 col-sm-2">
-                        <img src="images/client03.png" alt="">
-                    </div>
-                    <div class="col-12 col-sm-2">
-                        <img src="images/client04.png" alt="">
-                    </div>
-                    <div class="col-12 col-sm-2">
-                        <img src="images/client05.png" alt="">
-                    </div>
-                    <div class="col-1 col-sm-1 hidden-sm">&nbsp;</div>
-                </div>
-                <!-- /row -->
-            </div>
-            <!-- /container -->
-        </div>
-        <!-- /slide5 -->
-
         <!-- === Slide 6 / Contact === -->
-        <div class="slide story" id="slide-6" data-slide="6">
+        <div class="slide story" id="slide-6" data-slide="4">
             <div class="container">
                 <div class="row title-row">
                     <div class="col-12 font-light">Leave us a <span class="font-semibold">message</span>
@@ -371,7 +250,7 @@
                     </div>
                     <!-- /col12 -->
                     <div class="col-12 col-sm-2 with-hover-text">
-                        <p><a target="_blank" href="#"><i class="icon icon-home"></i></a>
+                        <p><a target="_blank" href="http://pleasebelievepeoplearehungry.com/contact"><i class="icon icon-home"></i></a>
                         </p>
                         <span class="hover-text font-light ">1198 Old Castleberry Road 36426 Brewton,<br>AL 36426
                         </a>
