Added the paypal donation stuff

--- a/index.html
+++ b/index.html
@@ -92,8 +92,21 @@
                 <!-- /row -->
                 <div id="home-row-2" class="row clearfix">
                     <div class="col-12">
-                        <div class="donate-select"></div>
-                        <button class="btn btn-donate">Donate</button>
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <input type="hidden" name="cmd" value="_donations">
+                            <input type="hidden" name="business" value="foodbankcarlisa@yahoo.com">
+                            <input type="hidden" name="lc" value="US">
+                            <input type="hidden" name="amount">
+                            <input type="hidden" name="no_note" value="0">
+                            <input type="hidden" name="cn" value="Add special instructions to the seller:">
+                            <input type="hidden" name="no_shipping" value="2">
+                            <input type="hidden" name="currency_code" value="USD">
+                            <input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHosted">
+                            <center>
+                                <div class="donate-select"></div>
+                                <button class="btn btn-donate" type="submit">Donate</button>
+                            </center>
+                        </form>
                     </div>
                 </div>
                 <!-- /row -->
