Changed the titles
This website will be actually used for year round events, not only year end.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-        <title>Carlisa, Inc. Year End Fundraising Event</title>
+        <title>Carlisa's Fundraising Events</title>
         <meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes"
         />
         <meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
@@ -82,7 +82,7 @@
                 <h3 class="watch-out">Watch out for upcoming events and fundraising raffles</h3>
                 <div id="home-row-1" class="row clearfix">
                     <div class="col-12">
-                        <h1 class="font-semibold">Carlisa, Inc. <span class="font-thin">Year End Fundraising Event</span></h1>
+                        <h1 class="font-semibold"><span class="font-thin">Carlisa's</span> Fundraising Events</h1>
                         <h4 class="font-thin">Help someone <span class="font-semibold">today</span>.</h4>
                         <br>
                         <br>
